# claude-code-gui

./: .gitignore  CLAUDE_CODE_DESKTOP_OPTIK_UND_BEDIENUNG.md  README.md  claude-code-gui.py  claude-code-gui.sh  pyproject.toml
.github/workflows/: tests.yml
claude_code_gui/: __init__.py  __main__.py  gi_runtime.py
claude_code_gui/app/: constants.py
claude_code_gui/assets/: chat_template.py  glass_tokens.py  glass_tokens_web.py  gtk_css.py
claude_code_gui/config/: default_app_settings.json  provider_theme_settings.json
claude_code_gui/core/: model_permissions.py  paths.py  time_utils.py
claude_code_gui/domain/: app_settings.py  claude_types.py  cli_dialect.py  provider.py  session.py
claude_code_gui/runtime/: claude_process.py
claude_code_gui/services/: attachment_service.py  binary_probe.py  speech_transcribe.py
claude_code_gui/storage/: config_paths.py  recent_folders_store.py  (+1 more)
tests/: conftest.py  test_app_settings.py  test_app_settings_helpers.py  test_attachment_service.py  test_binary_probe.py  test_binary_probe_models.py  test_chat_template_assets.py  test_claude_argv_parity.py  test_claude_process_codex.py  test_claude_process_helpers.py  test_cli_dialect.py  test_codex_cli_contract.py  test_codex_dialect_argv.py  test_core_helpers.py  test_glass_tokens.py  test_gtk_css_generation.py  test_provider_config.py  test_provider_helpers.py  test_recent_folders_store.py  test_session_record.py  test_sessions_store.py  test_sessions_store_more.py  test_speech_transcribe.py  test_theme_distinct.py  test_tray.py  test_window_js_handlers.py
(+8 files in other folders)
