[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-gui"
version = "0.1.0"
description = "Claude Code GUI"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "coverage[toml]>=7.0",
]

[tool.setuptools.packages.find]
include = ["claude_code_gui*"]

[tool.setuptools.data-files]
"share/claude-code-gui/icons" = [
  "icons/*.svg",
  "icons/*.webp",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "unit: fast isolated tests",
  "integration: component tests without real CLI network dependencies",
  "contract: real CLI contract tests",
  "gtk_css: css generation and snapshot tests",
]

[tool.coverage.run]
source = ["claude_code_gui"]
branch = true
omit = [
  "claude_code_gui/ui/window.py",
]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_empty = true
